--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                         </p>
                     </div>
                 </div>
-                <form action="https://formspree.io/f/xovkaryw" method="POST">
+                <form id="contactForm" action="https://formspree.io/f/xovkaryw" method="POST">
                     <div class="form-row">
                         <input type="text" name="business" placeholder="Business Name *" required>
                     </div>
@@ -577,6 +577,7 @@
                         <textarea name="message" rows="4" placeholder="Tell us about your project..."></textarea>
                     </div>
                     <button type="submit" class="btn" style="width: 100%; margin-top: 20px;">Send Inquiry</button>
+                    <p id="formStatus" style="margin-top: 15px; font-size: 0.9rem; display: none;"></p>
                 </form>
             </div>
         </section>
@@ -608,6 +609,43 @@
                 dropdown.value = pkgValue;
             }
         }
+
+        // Custom Form Submission
+        const form = document.getElementById('contactForm');
+        const status = document.getElementById('formStatus');
+
+        form.addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const formData = new FormData(form);
+
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    body: formData,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
+
+                if (response.ok) {
+                    status.style.display = 'block';
+                    status.style.color = 'var(--text-primary)';
+                    status.innerHTML = "Thanks for your submission! We'll be in touch soon.";
+                    form.reset();
+                    setTimeout(() => {
+                        status.style.display = 'none';
+                    }, 5000);
+                } else {
+                    status.style.display = 'block';
+                    status.style.color = '#ff6b6b';
+                    status.innerHTML = "Oops! There was a problem submitting your form.";
+                }
+            } catch (error) {
+                status.style.display = 'block';
+                status.style.color = '#ff6b6b';
+                status.innerHTML = "Oops! There was a problem submitting your form.";
+            }
+        });
     </script>
 </body>
 
