--- a/index.html
+++ b/index.html
@@ -392,11 +392,44 @@
                         <span
                             style="font-size: 0.8rem; letter-spacing: 0.1em; text-transform: uppercase; color: var(--text-tertiary);">Internal
                             Tools • 2025</span>
-                        <h3 style="font-size: 1.5rem; margin-top: 10px; margin-bottom: 20px;">Infracare Sales Alert</h3>
-                        <p style="color: var(--text-secondary); font-size: 0.95rem; max-width: 600px;">A comprehensive
-                            internal dashboard designed to track real-time sales data and integrate seamlessly with
-                            QuickBooks. This tool automates alert systems, improving response times and financial
-                            tracking efficiency for the internal team.</p>
+                        <h3 style="font-size: 1.75rem; margin-top: 10px; margin-bottom: 10px;">Infracare Sales Alert
+                        </h3>
+                        <p
+                            style="color: var(--text-primary); font-size: 1.1rem; font-weight: 500; margin-bottom: 20px;">
+                            Revive customers, Recover revenue, Reclaim control.
+                        </p>
+                        <p
+                            style="color: var(--text-secondary); font-size: 0.95rem; margin-bottom: 30px; max-width: 700px; line-height: 1.6;">
+                            Inactive customers are missed revenue. Reactivate them with ease using clear, powerful,
+                            visually intuitive tools that put you firmly in control.
+                        </p>
+
+                        <div
+                            style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-bottom: 30px;">
+                            <div>
+                                <h4 style="font-size: 1rem; color: var(--text-primary); margin-bottom: 8px;">Churn Risk
+                                    Detection</h4>
+                                <p style="font-size: 0.9rem; color: var(--text-secondary);">Instantly spot inactive and
+                                    low value clients—and re-engage them with ease.</p>
+                            </div>
+                            <div>
+                                <h4 style="font-size: 1rem; color: var(--text-primary); margin-bottom: 8px;">Sales
+                                    Intelligence</h4>
+                                <p style="font-size: 0.9rem; color: var(--text-secondary);">Visual dashboards to
+                                    identify action areas on customers, collections with minimum clicks.</p>
+                            </div>
+                            <div>
+                                <h4 style="font-size: 1rem; color: var(--text-primary); margin-bottom: 8px;">Secure
+                                    Integration</h4>
+                                <p style="font-size: 0.9rem; color: var(--text-secondary);">Bank-grade security with
+                                    official QuickBooks sync.</p>
+                            </div>
+                        </div>
+
+                        <p
+                            style="color: var(--text-primary); font-weight: 500; font-size: 0.95rem; border-top: 1px solid var(--border-subtle); padding-top: 20px; display: inline-block;">
+                            An app that would empower your business!
+                        </p>
                     </div>
                     <div style="margin-top: 40px;">
                     </div>
