--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         .hero-bg {
             background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),
-                url('https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&q=80');
+                url('https://img.freepik.com/free-photo/computer-with-covid19-illustration-screen-standing-desk-empty-office-room-global-pandemic-modern-hospital-room-equipped-with-professional-medical-instruments-virus-cell-image_482257-38407.jpg?semt=ais_hybrid&w=740&q=80');
             background-size: cover;
             background-position: center;
         }
