--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </script>
     <style>
         html { scroll-behavior: smooth; }
-        .toast-hidden { transform: translate(-50%, 100px); opacity: 0; pointer-events: none; }
-        .toast-visible { transform: translate(-50%, 0); opacity: 1; }
+        .toast-hidden { transform: translate(-50%, 100px); opacity: 0; pointer-events: none; visibility: hidden; }
+        .toast-visible { transform: translate(-50%, 0); opacity: 1; visibility: visible; }
     </style>
 </head>
 
 <body class="font-sans bg-white text-gray-900 antialiased">
-    <nav class="bg-white sticky top-0 z-50">
+    <nav class="bg-white sticky top-0 z-50 border-b border-gray-50">
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex justify-between h-16 items-center">
-                <span class="text-xs font-bold tracking-tight text-gray-900">Professional Medical Web solutions</span>
+                <span class="text-[10px] font-bold tracking-tight text-gray-900 uppercase">Professional Medical Web solutions</span>
                 <a href="#contact" class="px-5 py-1.5 rounded-full text-[10px] font-black bg-gray-900 text-white uppercase tracking-widest">Start Project</a>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <div>
                     <p class="text-[10px] font-black tracking-widest text-gray-400 uppercase mb-8">Our Approach</p>
                     <h2 class="text-xl font-black uppercase tracking-tight mb-8">Patient-First Digital Strategy</h2>
-                    <div class="grid md:grid-cols-3 gap-8">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                         <div>
                             <i data-feather="shield" class="w-4 h-4 mb-3 text-gray-900"></i>
                             <h4 class="text-[11px] font-black uppercase mb-2">Focus on Care</h4>
@@ -73,15 +73,14 @@
                 </div>
 
                 <div>
-                    <p class="text-[10px] font-black tracking-widest text-gray-400 uppercase mb-8 text-center">Pricing Models</p>
                     <h2 class="text-xl font-black uppercase tracking-tight mb-8 text-center">Flexible Engagement</h2>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="border border-gray-100 p-6 rounded-lg text-left bg-gray-50">
+                        <div class="border border-gray-100 p-6 rounded-lg bg-gray-50">
                             <h3 class="text-[11px] font-black uppercase mb-2">Professional Build</h3>
                             <p class="text-[9px] text-gray-500 mb-4">One-time fee for a high-performance digital foundation.</p>
                             <button onclick="selectPackage('one-time')" class="text-[9px] font-black uppercase tracking-widest border-b border-gray-900">Select Model</button>
                         </div>
-                        <div class="bg-gray-900 p-6 rounded-lg text-left text-white">
+                        <div class="bg-gray-900 p-6 rounded-lg text-white">
                             <h3 class="text-[11px] font-black uppercase mb-2">Growth Subscription</h3>
                             <p class="text-[9px] text-gray-400 mb-4">Monthly plans for managed SEO and social marketing.</p>
                             <button onclick="selectPackage('monthly')" class="text-[9px] font-black uppercase tracking-widest border-b border-white">Start Plan</button>
@@ -94,12 +93,12 @@
                 <h2 class="text-2xl font-black text-gray-900 uppercase tracking-tighter mb-10 text-center">Ready to build?</h2>
                 <form id="contactForm" action="https://formspree.io/f/xovkaryw" method="POST" class="space-y-6">
                     <div>
-                        <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Business Name *</label>
-                        <input type="text" name="business" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm" placeholder="Clinic or Doctor Name">
+                        <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Clinic or Doctor Name *</label>
+                        <input type="text" name="business" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Email Address *</label>
-                        <input type="email" name="email" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm" placeholder="doctor@clinic.com">
+                        <input type="email" name="email" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Interested In *</label>
@@ -110,8 +109,8 @@
                         </select>
                     </div>
                     <div>
-                        <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Project Brief *</label>
-                        <textarea name="message" required rows="2" class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm resize-none" placeholder="Briefly describe your goals..."></textarea>
+                        <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Briefly describe your goals... *</label>
+                        <textarea name="message" required rows="2" class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm resize-none"></textarea>
                     </div>
                     <button type="submit" id="submitBtn" class="w-full py-4 bg-gray-900 text-white font-black uppercase tracking-widest text-[10px] hover:bg-gray-800 transition-all">
                         Send Inquiry
@@ -140,31 +139,56 @@
 
     <script>
         feather.replace();
+
         function selectPackage(val) {
             document.getElementById('packageSelect').value = val;
-            window.scrollTo({ top: document.getElementById('contact').offsetTop - 100, behavior: 'smooth' });
+            window.scrollTo({ top: document.getElementById('contact').offsetTop - 80, behavior: 'smooth' });
         }
 
         const form = document.getElementById('contactForm');
         const toast = document.getElementById('toast');
         const btn = document.getElementById('submitBtn');
 
-        form.addEventListener('submit', async (e) => {
+        form.addEventListener('submit', function(e) {
             e.preventDefault();
-            btn.disabled = true; btn.innerText = "SENDING...";
-            try {
-                const response = await fetch(form.action, {
-                    method: 'POST',
-                    body: new FormData(form),
-                    headers: { 'Accept': 'application/json' }
-                });
+            btn.disabled = true;
+            btn.innerText = "SENDING...";
+
+            const formData = new FormData(form);
+            const data = {};
+            formData.forEach((value, key) => data[key] = value);
+
+            fetch(form.action, {
+                method: 'POST',
+                body: JSON.stringify(data),
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': 'application/json'
+                }
+            })
+            .then(response => {
                 if (response.ok) {
                     form.reset();
-                    toast.classList.replace('toast-hidden', 'toast-visible');
-                    setTimeout(() => toast.classList.replace('toast-visible', 'toast-hidden'), 3000);
+                    btn.disabled = false;
+                    btn.innerText = "SEND INQUIRY";
+                    // Trigger Toast
+                    toast.classList.remove('toast-hidden');
+                    toast.classList.add('toast-visible');
+                    setTimeout(() => {
+                        toast.classList.remove('toast-visible');
+                        toast.classList.add('toast-hidden');
+                    }, 4000);
+                } else {
+                    response.json().then(data => {
+                        alert(data.error || "Submission failed. Please try again.");
+                    });
                 }
-            } catch (error) { alert("Network Error"); }
-            finally { btn.disabled = false; btn.innerText = "SEND INQUIRY"; }
+            })
+            .catch(error => {
+                alert("Network error. Please try again.");
+                btn.disabled = false;
+                btn.innerText = "SEND INQUIRY";
+            });
         });
     </script>
 </body>
