--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     </script>
     <style>
         html { scroll-behavior: smooth; }
-        .toast-hidden { transform: translate(-50%, 100px); opacity: 0; pointer-events: none; visibility: hidden; }
-        .toast-visible { transform: translate(-50%, 0); opacity: 1; visibility: visible; }
     </style>
 </head>
 
@@ -75,12 +73,12 @@
                 <div>
                     <h2 class="text-xl font-black uppercase tracking-tight mb-8 text-center">Flexible Engagement</h2>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="border border-gray-100 p-6 rounded-lg bg-gray-50">
+                        <div class="border border-gray-100 p-6 rounded-lg bg-gray-50 text-center">
                             <h3 class="text-[11px] font-black uppercase mb-2">Professional Build</h3>
                             <p class="text-[9px] text-gray-500 mb-4">One-time fee for a high-performance digital foundation.</p>
                             <button onclick="selectPackage('one-time')" class="text-[9px] font-black uppercase tracking-widest border-b border-gray-900">Select Model</button>
                         </div>
-                        <div class="bg-gray-900 p-6 rounded-lg text-white">
+                        <div class="bg-gray-900 p-6 rounded-lg text-white text-center">
                             <h3 class="text-[11px] font-black uppercase mb-2">Growth Subscription</h3>
                             <p class="text-[9px] text-gray-400 mb-4">Monthly plans for managed SEO and social marketing.</p>
                             <button onclick="selectPackage('monthly')" class="text-[9px] font-black uppercase tracking-widest border-b border-white">Start Plan</button>
@@ -91,14 +89,15 @@
 
             <div id="contact" class="bg-white border border-gray-100 p-8 md:p-12 rounded-2xl shadow-sm">
                 <h2 class="text-2xl font-black text-gray-900 uppercase tracking-tighter mb-10 text-center">Ready to build?</h2>
-                <form id="contactForm" action="https://formspree.io/f/xovkaryw" method="POST" class="space-y-6">
+                
+                <form action="https://formspree.io/f/xovkaryw" method="POST" class="space-y-6">
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Clinic or Doctor Name *</label>
                         <input type="text" name="business" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Email Address *</label>
-                        <input type="email" name="email" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
+                        <input type="email" name="_replyto" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Interested In *</label>
@@ -112,7 +111,10 @@
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Briefly describe your goals... *</label>
                         <textarea name="message" required rows="2" class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm resize-none"></textarea>
                     </div>
-                    <button type="submit" id="submitBtn" class="w-full py-4 bg-gray-900 text-white font-black uppercase tracking-widest text-[10px] hover:bg-gray-800 transition-all">
+                    
+                    <input type="text" name="_gotcha" style="display:none" />
+
+                    <button type="submit" class="w-full py-4 bg-gray-900 text-white font-black uppercase tracking-widest text-[10px] hover:bg-gray-800 transition-all">
                         Send Inquiry
                     </button>
                 </form>
@@ -132,64 +134,19 @@
         <p class="text-[9px] font-bold text-gray-400 uppercase tracking-[0.2em]">4559 Dundas St West · Toronto · ON · M9A 1B2</p>
     </footer>
 
-    <div id="toast" class="fixed bottom-10 left-1/2 z-[100] bg-gray-900 text-white px-8 py-3 rounded-full flex items-center shadow-2xl transition-all duration-500 toast-hidden">
-        <i data-feather="check-circle" class="w-4 h-4 text-green-400 mr-3"></i>
-        <span class="text-[9px] font-bold uppercase tracking-widest">Inquiry Sent Successfully</span>
-    </div>
-
     <script>
         feather.replace();
 
+        // Automatically selects the package and scrolls to the form
         function selectPackage(val) {
-            document.getElementById('packageSelect').value = val;
-            window.scrollTo({ top: document.getElementById('contact').offsetTop - 80, behavior: 'smooth' });
-        }
-
-        const form = document.getElementById('contactForm');
-        const toast = document.getElementById('toast');
-        const btn = document.getElementById('submitBtn');
-
-        form.addEventListener('submit', function(e) {
-            e.preventDefault();
-            btn.disabled = true;
-            btn.innerText = "SENDING...";
-
-            const formData = new FormData(form);
-            const data = {};
-            formData.forEach((value, key) => data[key] = value);
-
-            fetch(form.action, {
-                method: 'POST',
-                body: JSON.stringify(data),
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Accept': 'application/json'
-                }
-            })
-            .then(response => {
-                if (response.ok) {
-                    form.reset();
-                    btn.disabled = false;
-                    btn.innerText = "SEND INQUIRY";
-                    // Trigger Toast
-                    toast.classList.remove('toast-hidden');
-                    toast.classList.add('toast-visible');
-                    setTimeout(() => {
-                        toast.classList.remove('toast-visible');
-                        toast.classList.add('toast-hidden');
-                    }, 4000);
-                } else {
-                    response.json().then(data => {
-                        alert(data.error || "Submission failed. Please try again.");
-                    });
-                }
-            })
-            .catch(error => {
-                alert("Network error. Please try again.");
-                btn.disabled = false;
-                btn.innerText = "SEND INQUIRY";
+            const select = document.getElementById('packageSelect');
+            select.value = val;
+            const formElement = document.getElementById('contact');
+            window.scrollTo({
+                top: formElement.offsetTop - 80,
+                behavior: 'smooth'
             });
-        });
+        }
     </script>
 </body>
 </html>
