--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </script>
     <style>
         html { scroll-behavior: smooth; }
+        .toast-hidden { transform: translate(-50%, 100px); opacity: 0; pointer-events: none; visibility: hidden; }
+        .toast-visible { transform: translate(-50%, 0); opacity: 1; visibility: visible; }
     </style>
 </head>
 
@@ -90,14 +92,14 @@
             <div id="contact" class="bg-white border border-gray-100 p-8 md:p-12 rounded-2xl shadow-sm">
                 <h2 class="text-2xl font-black text-gray-900 uppercase tracking-tighter mb-10 text-center">Ready to build?</h2>
                 
-                <form action="https://formspree.io/f/xovkaryw" method="POST" class="space-y-6">
+                <form id="contactForm" action="https://formspree.io/f/xovkaryw" method="POST" class="space-y-6">
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Clinic or Doctor Name *</label>
                         <input type="text" name="business" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Email Address *</label>
-                        <input type="email" name="_replyto" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
+                        <input type="email" name="email" required class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm">
                     </div>
                     <div>
                         <label class="block text-[9px] font-black uppercase tracking-widest text-gray-400 mb-2">Interested In *</label>
@@ -112,9 +114,7 @@
                         <textarea name="message" required rows="2" class="w-full border-b border-gray-200 py-2 focus:outline-none focus:border-gray-900 text-sm resize-none"></textarea>
                     </div>
                     
-                    <input type="text" name="_gotcha" style="display:none" />
-
-                    <button type="submit" class="w-full py-4 bg-gray-900 text-white font-black uppercase tracking-widest text-[10px] hover:bg-gray-800 transition-all">
+                    <button type="submit" id="submitBtn" class="w-full py-4 bg-gray-900 text-white font-black uppercase tracking-widest text-[10px] hover:bg-gray-800 transition-all">
                         Send Inquiry
                     </button>
                 </form>
@@ -134,19 +134,54 @@
         <p class="text-[9px] font-bold text-gray-400 uppercase tracking-[0.2em]">4559 Dundas St West · Toronto · ON · M9A 1B2</p>
     </footer>
 
+    <div id="toast" class="fixed bottom-10 left-1/2 z-[100] bg-gray-900 text-white px-8 py-3 rounded-full flex items-center shadow-2xl transition-all duration-500 toast-hidden">
+        <i data-feather="check-circle" class="w-4 h-4 text-green-400 mr-3"></i>
+        <span class="text-[9px] font-bold uppercase tracking-widest">Inquiry Sent Successfully</span>
+    </div>
+
     <script>
         feather.replace();
 
-        // Automatically selects the package and scrolls to the form
         function selectPackage(val) {
-            const select = document.getElementById('packageSelect');
-            select.value = val;
-            const formElement = document.getElementById('contact');
-            window.scrollTo({
-                top: formElement.offsetTop - 80,
-                behavior: 'smooth'
-            });
+            document.getElementById('packageSelect').value = val;
+            window.scrollTo({ top: document.getElementById('contact').offsetTop - 80, behavior: 'smooth' });
         }
+
+        const form = document.getElementById('contactForm');
+        const toast = document.getElementById('toast');
+        const btn = document.getElementById('submitBtn');
+
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            btn.disabled = true;
+            btn.innerText = "SENDING...";
+
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: 'POST',
+                body: formData,
+                headers: { 'Accept': 'application/json' }
+            })
+            .then(response => {
+                if (response.ok) {
+                    form.reset(); //
+                    toast.classList.remove('toast-hidden'); //
+                    toast.classList.add('toast-visible'); //
+                    setTimeout(() => {
+                        toast.classList.remove('toast-visible');
+                        toast.classList.add('toast-hidden');
+                    }, 4000);
+                } else {
+                    alert("Submission failed. Please try again.");
+                }
+            })
+            .catch(error => alert("Network error. Please try again."))
+            .finally(() => {
+                btn.disabled = false;
+                btn.innerText = "SEND INQUIRY";
+            });
+        });
     </script>
 </body>
 </html>
